<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Color_Conc"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/Concentracionmoles"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/item_concentracionMoles"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/Concentracion"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/item_concentracionMoles"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_R_color"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/item_R_color"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/R_color"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/item_red"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/item_B_color"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/item_B_color"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/B_color"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/item_blue"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/item_G_color"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/item_G_color"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/G_color"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/item_green"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>